# champ_description_bittle

./: CMakeLists.txt  README.md  package.xml
config/champ/: joints.yaml  links.yaml
launch/: description.launch.py  view_urdf.launch  view_urdf.launch.py
urdf/: bittle.urdf
